--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/sanctum": "^2.6",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "2.4",
+        "pusher/pusher-php-server": "~4.0",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
