--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "nao-pon/flysystem-google-drive": "~1.1",
         "pusher/pusher-php-server": "~4.0",
         "tymon/jwt-auth": "^1.0"
